two button done

--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
           </div>
           <!-- nav ber end here -->
 
+
+          <!-- two btn here -->
+        <div id="history_and_donation_container" class=" mt-5 flex gap-5 justify-center items-center ">
+             
+            <button id="donation-btn" class="btn bg-clifford hover:bg-clifford font-bold ">Donation</button>
+            <button id="history-btn" class=" btn  ">History</button>
+  
+        </div>
+          <!-- two btn end -->
+
     </header>
 
     <main>
