first money donation done

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     volunteers, though some areas remain inaccessible
                   </p>
                   <input id="input-donate-btn1" type="text" placeholder="Write Donation Amount" class="mt-10 p-2 w-full border border-gray-300 rounded-lg">
-                  <button id="donate_btn-1" class="text-black font-bold py-2 px-4 mt-5 rounded-lg w-full hover:bg-clifford bg-clifford">Donate Now</button>
+                  <button id="first-donate-box-btn" class="text-black font-bold py-2 px-4 mt-5 rounded-lg w-full hover:bg-clifford bg-clifford">Donate Now</button>
                 </div>
               </div>
             </div>
