three donation part complete

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="ml-4 w-2/3">
                   <div class="flex items-center mb-5">
                     <img src="./assets/coin.png" alt="coin icon" class="w-6 h-6">
-                    <span id="second_amount_donation" class="font-medium text-coincolor"> 50 </span><span>  BDT</span>
+                    <span id="second_amount_donation" class="font-medium text-coincolor"> 500 </span><span>  BDT</span>
                   </div>
                   <h3 class="text-lg font-bold">Donate for Flood Relief in Feni,Bangladesh</h3>
                   <p class="text-gray-600 text-sm mt-10">
@@ -126,7 +126,7 @@
                     
                   </p>
                   <input id="input_donate_btn2" type="text" placeholder="Write Donation Amount" class="mt-10 p-2 w-full border border-gray-300 rounded-lg">
-                  <button id="donate_btn-2" class="text-black font-bold py-2 px-4 mt-5 rounded-lg w-full hover:bg-clifford bg-clifford">Donate Now</button>
+                  <button id="second-donate-box-btn" class="text-black font-bold py-2 px-4 mt-5 rounded-lg w-full hover:bg-clifford bg-clifford">Donate Now</button>
                 </div>
               </div>
             </div>
@@ -136,7 +136,7 @@
                 <div class="ml-4 w-2/3">
                   <div class="flex items-center mb-5">
                     <img src="./assets/coin.png" alt="coin icon" class="w-6 h-6">
-                    <span id="third_amount_donation" class="font-medium text-coincolor"> 10 </span><span>  BDT</span>
+                    <span id="third_amount_donation" class="font-medium text-coincolor"> 100 </span><span>  BDT</span>
                   </div>
                   <h3 class="text-lg font-bold">Aid for Injured in the Quota Movement</h3>
                   <p class="text-gray-600 text-sm mt-10">
@@ -145,7 +145,7 @@
                    The protest began in June 2024, in response to the Supreme Court of Bangladesh reinstating a 30% quota for descendants of freedom fighters, reversing the government decision made in response to the 2018 Bangladesh quota reform movement.
                   </p>
                   <input id="input_donate_btn3" type="text" placeholder="Write Donation Amount" class="mt-10 p-2 w-full border border-gray-300 rounded-lg">
-                  <button id="donate_btn-3" class="text-black font-bold py-2 px-4 mt-5 rounded-lg w-full hover:bg-clifford bg-clifford">Donate Now</button>
+                  <button id="third_donate-box-btn" class="text-black font-bold py-2 px-4 mt-5 rounded-lg w-full hover:bg-clifford bg-clifford">Donate Now</button>
                 </div>
               </div>
             </div>
