--- a/index.html
+++ b/index.html
@@ -193,26 +193,7 @@
 
 
     </footer>
-    
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <script src="./js/togle.js"></script>
     <script src="./js/index.js"></script>
     <script src="./js/utilities.js"></script>
 </body>
